# survie

./: .gitignore  Cargo.toml  README.md  justfile
public/: index.html
public/wasm/: survie.js
src/: main.rs
src/animation/: animation_move_attack_state_handle_system.rs  animation_move_down_state_handle_system.rs  attack_animation_system.rs  idle_animation_system.rs  mod.rs  movement_animation_down_system.rs  movement_animation_side_system.rs  movement_animation_up_system.rs  teleport_animation_system.rs
src/assets_handling/: mod.rs  preload_animation_system.rs  preload_audio_system.rs  preload_enemy_system.rs  preload_game_system.rs  preload_item_system.rs  preload_mod_system.rs  preload_player_system.rs  preload_projectile_system.rs  preload_stage_spawn_system.rs  preload_texture_system.rs  preload_window_system.rs  preload_world_grid_config_system.rs
src/audio/: background_music_system.rs  mod.rs  sound_manager.rs
src/collision/: calculate_hit_box_quad_tree_system.rs  calculate_item_quad_tree_system.rs  calculate_solid_body_quad_tree_system.rs  enemy_hit_box_collision_system.rs  enemy_player_collision_system.rs  mod.rs  solid_body_collision_system.rs
src/input/: mod.rs  player_control_aim_system.rs  player_control_movement_system.rs  setup_camera_systems.rs  toggle_pause_system.rs  update_camera_zoom_system.rs
src/models/: aim_direction.rs  attribute_container.rs  attribute_container_slot.rs  damaged_effect.rs  damaged_entities.rs  enemy.rs  gold_storage.rs  layerable.rs  main_camera.rs  mod.rs  mod_container.rs  mod_container_slot.rs  move_direction.rs  (+7 more)
(+185 files in other folders)
