[package]
name = "survie"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "survie"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.12.1", default_features = true }

bevy_egui = "0.24"
bevy-inspector-egui = "0.22"
serde = "1.0.193"
serde_json = "1.0.108"
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.5"
bevy_particle_systems = "0.11"
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git", version = "0.7.0" }

[features]
hotreload = ["bevy/file_watcher"]

[profile.dev]
opt-level = 1
overflow-checks = false
split-debuginfo = "unpacked"

[profile.release]
incremental = true

[dependencies.bevy_kira_audio]
version = "0.18.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
    "mp3",
    "wav",
]